# lua-module-usb-hid

./: CMakeLists.txt  PATCH_Kconfig.txt  PATCH_app_lua_modules.txt  PATCH_sdkconfig_p4_nano.txt  README.md
skills/usb_hid/: SKILL.md
skills/usb_hid/scripts/: start_usb_hid_monitor.lua
src/: lua_module_usb_hid.c  lua_module_usb_hid.h  lua_module_usb_hid_events.c  lua_module_usb_hid_host.c  lua_module_usb_hid_priv.h
test/: usb_hid_basic.lua
